# Retrive configuration from appsetting

--- a/CoreWebApp/CoreWebApp/appsettings.json
+++ b/CoreWebApp/CoreWebApp/appsettings.json
@@ -4,5 +4,13 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "DescriptionUrl" : "https://docs.microsoft.com/en-us/learn/modules/intro-to-logic-apps/index",
+  "AllowedHosts": "*",
+  
+  "Parameters": {
+    "Speed": 20,
+    "Acceleration" :20,
+    "Name"  : "f1-22"
+  }
 }
+
