Serilog: Use appsettings to confogure serilog

--- a/CoreWebApp/CoreWebApp/appsettings.json
+++ b/CoreWebApp/CoreWebApp/appsettings.json
@@ -11,6 +11,27 @@
     "Speed": 20,
     "Acceleration" :20,
     "Name"  : "f1-22"
+  },
+
+  "Serilog" : {
+
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override" : {
+        "System": "Information"
+      }
+    },
+    "WriteTo" : [
+      {
+        "Name" : "Console"
+      },
+      {
+        "Name" :"RollingFile",
+        "Args": {
+          "pathFormat": "\\Logs\\log-{Date}.txt"
+            }
+        }
+    ]
   }
 }
 
