#Serilog: added enricher setup in appsettings

--- a/CoreWebApp/CoreWebApp/appsettings.json
+++ b/CoreWebApp/CoreWebApp/appsettings.json
@@ -14,16 +14,20 @@
   },
 
   "Serilog" : {
+    "Using" : ["Serilog.Sinks.Console","CoreWebApp"],
 
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Override" : {
         "System": "Information"
       }
     },
     "WriteTo" : [
       {
-        "Name" : "Console"
+        "Name" : "Console",
+         "Args": {
+          "outputTemplate": "{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} Added by enricher -> {AppInfo}{NewLine}{Exception}"
+            }
       },
       {
         "Name" :"RollingFile",
@@ -31,7 +35,8 @@
           "pathFormat": "\\Logs\\log-{Date}.txt"
             }
         }
-    ]
+    ],
+    "Enrich": ["WithAppInfo" ]
   }
 }
 
