#Identity: Add defaultIdentity

--- a/CoreWebApp/CoreWebApp/appsettings.json
+++ b/CoreWebApp/CoreWebApp/appsettings.json
@@ -4,39 +4,43 @@
       "Default": "Warning"
     }
   },
-  "DescriptionUrl" : "https://docs.microsoft.com/en-us/learn/modules/intro-to-logic-apps/index",
+  "DescriptionUrl": "https://docs.microsoft.com/en-us/learn/modules/intro-to-logic-apps/index",
   "AllowedHosts": "*",
-  
   "Parameters": {
     "Speed": 20,
-    "Acceleration" :20,
-    "Name"  : "f1-22"
+    "Acceleration": 20,
+    "Name": "f1-22"
   },
-
-  "Serilog" : {
-    "Using" : ["Serilog.Sinks.Console","CoreWebApp"],
-
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "CoreWebApp"
+    ],
     "MinimumLevel": {
       "Default": "Information",
-      "Override" : {
+      "Override": {
         "System": "Information"
       }
     },
-    "WriteTo" : [
+    "WriteTo": [
       {
-        "Name" : "Console",
-         "Args": {
+        "Name": "Console",
+        "Args": {
           "outputTemplate": "{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} Added by enricher -> {AppInfo}{NewLine}{Exception}"
-            }
+        }
       },
       {
-        "Name" :"RollingFile",
+        "Name": "RollingFile",
         "Args": {
           "pathFormat": "\\Logs\\log-{Date}.txt"
-            }
         }
+      }
     ],
-    "Enrich": ["WithAppInfo" ]
+    "Enrich": [
+      "WithAppInfo"
+    ]
+  },
+  "ConnectionStrings": {
+    "CoreWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CoreWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
-
