--- a/CoreWebApp/CoreWebApp/appsettings.json
+++ b/CoreWebApp/CoreWebApp/appsettings.json
@@ -40,6 +40,14 @@
       "WithAppInfo"
     ]
   },
+
+  "JwtTokenOptions": {
+    "Audience": "SampleAudience",
+    "Issuer": "JWPAPI",
+    "AccessTokenExpiration": 30,
+    "RefreshTokenExpiration": 60,
+    "SecretKey": "jwts-are-awesome"
+  },
   "ConnectionStrings": {
     "CoreWebAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CoreWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
