--- a/CoreWebApp/CoreWebApp/CoreWebApp.csproj
+++ b/CoreWebApp/CoreWebApp/CoreWebApp.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="JWT" Version="5.3.1" />
     <PackageReference Include="MediatR" Version="7.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNet.Identity.Core" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
