#Secret. Retrived from Azure key vault using self-signed-cert and Azure app registrtation

--- a/CoreWebApp/CoreWebApp/appsettings.json
+++ b/CoreWebApp/CoreWebApp/appsettings.json
@@ -37,6 +37,12 @@
         }
     ],
     "Enrich": ["WithAppInfo" ]
-  }
+  },
+  "AzureADApplicationId": "d486965c-20e5-4fd4-b51a-2d7e7a9f8a5f",
+  "KeyVaultName": "secretkey1",
+
+
+  "AzureADCertThumbprint":"A0ED82AFD85FF0F0F94568035905936B8EA85A97"
+
 }
 
