Added api to set get secret.. Azure configuration must be checked

--- a/CoreWebApp/CoreWebApp/appsettings.json
+++ b/CoreWebApp/CoreWebApp/appsettings.json
@@ -4,45 +4,53 @@
       "Default": "Warning"
     }
   },
-  "DescriptionUrl" : "https://docs.microsoft.com/en-us/learn/modules/intro-to-logic-apps/index",
+  "DescriptionUrl": "https://docs.microsoft.com/en-us/learn/modules/intro-to-logic-apps/index",
   "AllowedHosts": "*",
-  
+
   "Parameters": {
     "Speed": 20,
-    "Acceleration" :20,
-    "Name"  : "f1-22"
+    "Acceleration": 20,
+    "Name": "f1-22"
   },
 
-  "Serilog" : {
-    "Using" : ["Serilog.Sinks.Console","CoreWebApp"],
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "CoreWebApp" ],
 
     "MinimumLevel": {
       "Default": "Information",
-      "Override" : {
+      "Override": {
         "System": "Information"
       }
     },
-    "WriteTo" : [
+    "WriteTo": [
       {
-        "Name" : "Console",
-         "Args": {
+        "Name": "Console",
+        "Args": {
           "outputTemplate": "{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} Added by enricher -> {AppInfo}{NewLine}{Exception}"
-            }
+        }
       },
       {
-        "Name" :"RollingFile",
+        "Name": "RollingFile",
         "Args": {
           "pathFormat": "\\Logs\\log-{Date}.txt"
-            }
         }
+      }
     ],
-    "Enrich": ["WithAppInfo" ]
+    "Enrich": [ "WithAppInfo" ]
   },
-  "AzureADApplicationId": "d486965c-20e5-4fd4-b51a-2d7e7a9f8a5f",
-  "KeyVaultName": "secretkey1",
+
+  "KeyVaultOptions": 
+  {
+    "KeyVaultName": "stogakeyvault",
+    "SecretName" : "secretkey1",
+    "AzureADApplicationId": "d486965c-20e5-4fd4-b51a-2d7e7a9f8a5f",  
+    "AzureADCertThumbprint": "A0ED82AFD85FF0F0F94568035905936B8EA85A97"
+  }
 
 
-  "AzureADCertThumbprint":"A0ED82AFD85FF0F0F94568035905936B8EA85A97"
+
+
+
 
 }
 
